--- a/styles.css
+++ b/styles.css
@@ -35,3 +35,29 @@ body{
     color:rgb(255, 255, 255);
 }
 
+.home{
+    min-height: 98rem;
+    display: flex;
+    align-items: center;
+    background: url(pozadina.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.content h1{
+    font-size: 6rem;
+    padding-left: 10rem;
+    color: rgba(255, 255, 255);
+    text-shadow: rgb(255, 72, 0) 7px 7px 7px;
+}
+
+.content h2{
+    font-size: 4rem;
+    padding-left: 10rem;
+    color:rgb(255, 255, 255);
+}
+.content {
+    padding-top: 60rem;
+    padding-left: 90rem;
+}
+
