--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,7 @@
 
 html{
     font-size: 10px;
-    overflow-x: hidden
-    
+    overflow-x: hidden 
 }
 
 body{
@@ -56,6 +55,7 @@ body{
     padding-left: 10rem;
     color:rgb(255, 255, 255);
 }
+
 .content {
     padding-top: 60rem;
     padding-left: 90rem;
@@ -63,7 +63,7 @@ body{
 
 .products {
     max-width: 95%;
-    height: 110rem;
+    height: 145rem;
 }
 
 .heading {
@@ -90,9 +90,11 @@ body{
     background-color: black;
     
 }
+
 .card-title {
     text-align: center;
 }
+
 .card-body {
     padding-top: 1rem;
     font-size: 1.5rem;
@@ -158,5 +160,6 @@ html{
 }
 
 .content h2{
-    padding-left: 00rem;
+    padding-left: 0rem;
+}
 }
